--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ethers": "^6.12.1",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@thirdweb-dev/react": "^4.6.14",
+    "@thirdweb-dev/sdk": "^4.0.75",
+    "ethers": "^5.7.2",
+    "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
