--- a/client/.env.example
+++ b/client/.env.example
@@ -1,3 +1,2 @@
 VITE_THIRD_WEB_CONTRACT_CODE = your third-web contract code
-VITE_CLIENT_ID = third-web api client id
-VITE_API_SECRET_KEY = third-web api secret key
+VITE_INFURA_SECRET_KEY = your infura secret key
