created the profile page

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,2 +1,4 @@
 VITE_THIRD_WEB_CONTRACT_CODE = your third-web contract code
 VITE_INFURA_SECRET_KEY = your infura secret key
+VITE_CLIENT_ID = your third-web client id
+VITE_API_SECRET_KEY = your third-web api secret key - not used
